fix: preload assets

--- a/src/public/preview/index.html
+++ b/src/public/preview/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://card.jgoon.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://card.jgoon.com/Garamond%20Classico%20SC.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://card.jgoon.com/texture.png"
+      as="image"
+    />
     <title>Bateman Business Card</title>
     <link
       rel="icon"
