--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bateman Card Builder</title>
     <link rel="icon" type="image/png" href="/bateman-favicon.png" />
+    <link rel="preconnect" href="https://card.jgoon.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://card.jgoon.com/Garamond%20Classico%20SC.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://card.jgoon.com/texture.png"
+      as="image"
+    />
     <style>
       :root {
         color-scheme: only light;
