--- a/src/public/preview/index.html
+++ b/src/public/preview/index.html
@@ -11,11 +11,7 @@
       type="font/ttf"
       crossorigin
     />
-    <link
-      rel="preload"
-      href="https://card.jgoon.com/texture.png"
-      as="image"
-    />
+    <link rel="preload" href="https://card.jgoon.com/texture.png" as="image" />
     <title>Bateman Business Card</title>
     <link
       rel="icon"
