remove shadow on mobile

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -161,6 +161,17 @@
         color: rgba(148, 163, 184, 0.6);
       }
 
+      @media (max-width: 640px) {
+        button {
+          box-shadow: none;
+        }
+
+        button:hover,
+        button:active {
+          box-shadow: none;
+        }
+      }
+
       .status {
         position: fixed;
         left: 50%;
