--- a/src/public/preview/index.html
+++ b/src/public/preview/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+    <meta name="format-detection" content="telephone=no" />
     <link rel="manifest" href="../site.webmanifest" />
     <link rel="preconnect" href="https://card.jgoon.com" crossorigin />
     <link
