--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bateman Card Builder</title>
     <link rel="icon" type="image/png" href="/bateman-favicon.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <link rel="preconnect" href="https://card.jgoon.com" crossorigin />
     <link
       rel="preload"
@@ -18,7 +22,6 @@
         color-scheme: only light;
         font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
           "Helvetica Neue", Arial, sans-serif;
-        background: #0e1012;
       }
 
       * {
@@ -30,8 +33,6 @@
         min-height: 100vh;
         display: flex;
         flex-direction: column;
-        background: radial-gradient(circle at 10% 10%, #171a1d, #090a0b 62%);
-        color: #f8fafc;
       }
 
       main {
@@ -159,6 +160,35 @@
         box-shadow: none;
         background: rgba(15, 17, 19, 0.72);
         color: rgba(148, 163, 184, 0.6);
+      }
+
+      @media (max-width: 640px) {
+        .overlay-controls {
+          bottom: 24px;
+          width: calc(100vw - 32px);
+          max-width: 360px;
+          gap: 8px;
+          flex-wrap: wrap;
+        }
+
+        button {
+          box-shadow: none;
+          padding: 0 20px;
+          font-size: 11px;
+          height: 42px;
+          min-width: 0;
+          flex: 1 1 calc(50% - 4px);
+        }
+
+        button:hover,
+        button:active {
+          box-shadow: none;
+        }
+
+        .overlay-controls button svg {
+          width: 14px;
+          height: 14px;
+        }
       }
 
       .status {
